# multi-admin

./: README.md
.github/workflows/: admin-a-backend.yml
admin-a/backend/.devcontainer/: devcontainer.json
admin-a/backend/app/: Dockerfile  alembic.ini  config.py  database.py  main.py  pyproject.toml
admin-a/backend/app/cruds/: auth.py  cognito.py  item.py
admin-a/backend/app/domain/entities/: item.py
admin-a/backend/app/domain/interfaces/: item_repository.py
admin-a/backend/app/domain/services/: item_service.py
admin-a/backend/app/migrations/: env.py
admin-a/backend/app/migrations/versions/: 2ea32514fe29_create_items_table.py  6ebfde8ac282_create_users_table.py  acbe690be774_first.py  e76c8663fc29_add_foreign_key.py  e9734cca1da1_add_salt_column.py
admin-a/backend/app/models/: models.py
admin-a/backend/app/repository/: item_repository.py
admin-a/backend/app/routers/: auth.py  item.py
admin-a/backend/app/schemas/: item.py  schemas.py  userschema.py
admin-a/backend/app/tests/: conftest.py  test_example.py  test_item.py
admin-a/backend/app/use_cases/: item_use_case.py
database/.devcontainer/: devcontainer.json
database/app/: alembic.ini  pyproject.toml
database/app/migrations/: env.py
database/app/migrations/versions/: 08c20f95f129_first.py  9f070208c23a_second.py  da306acfa4a4_first.py
database/app/models/: models.py
docker/: .gitignore  docker-compose.yml
